docs/api/qiskit/0.39/qiskit.transpiler.passes.ConvertConditionsToIfOps.mdx
---
title: ConvertConditionsToIfOps (v0.39)
description: API reference for qiskit.transpiler.passes.ConvertConditionsToIfOps in qiskit v0.39
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.ConvertConditionsToIfOps
---

# ConvertConditionsToIfOps

<Class id="qiskit.transpiler.passes.ConvertConditionsToIfOps" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.22/qiskit/transpiler/passes/utils/convert_conditions_to_if_ops.py" signature="ConvertConditionsToIfOps(*args, **kwargs)" modifiers="class">
  Bases: [`qiskit.transpiler.basepasses.TransformationPass`](qiskit.transpiler.TransformationPass "qiskit.transpiler.basepasses.TransformationPass")

  Convert instructions whose `condition` attribute is set to a non-`None` value into the equivalent single-statement `IfElseBlock`.

  This is a simple pass aimed at easing the conversion from the old style of using [`InstructionSet.c_if()`](qiskit.circuit.InstructionSet#c_if "qiskit.circuit.InstructionSet.c_if") into the new style of using more complex conditional logic.

  ## Methods

  <span id="qiskit-transpiler-passes-convertconditionstoifops-name" />

  ### name

  <Function id="qiskit.transpiler.passes.ConvertConditionsToIfOps.name" signature="ConvertConditionsToIfOps.name()">
    Return the name of the pass.
  </Function>

  <span id="qiskit-transpiler-passes-convertconditionstoifops-run" />

  ### run

  <Function id="qiskit.transpiler.passes.ConvertConditionsToIfOps.run" signature="ConvertConditionsToIfOps.run(dag)">
    Run a pass on the DAGCircuit. This is implemented by the pass developer.

    **Parameters**

    **dag** ([*DAGCircuit*](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")) – the dag on which the pass is run.

    **Raises**

    **NotImplementedError** – when this is left unimplemented for a pass.
  </Function>

  ## Attributes

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.ConvertConditionsToIfOps.is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.ConvertConditionsToIfOps.is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>
</Class>

